--- a/public/index.html
+++ b/public/index.html
@@ -192,16 +192,8 @@
               >
                 <div class="rounded-md shadow">
                   <a
-                    href="#"
+                    href="#portfolio"
                     class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
-                  >
-                    Get in touch
-                  </a>
-                </div>
-                <div class="mt-3 sm:mt-0 sm:ml-3">
-                  <a
-                    href="#"
-                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:text-indigo-600 hover:bg-indigo-50 focus:outline-none focus:shadow-outline focus:border-indigo-300 transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
                   >
                     See my portfolio
                   </a>
@@ -344,11 +336,20 @@
           >
             About me
           </h2>
-          <p class="mt-3 text-lg leading-7 text-gray-300">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, egestas
-            tempus tellus etiam sed. Quam a scelerisque amet ullamcorper eu enim
-            et fermentum, augue. Aliquet amet volutpat quisque ut interdum
-            tincidunt duis.
+          <p class="mt-3 text-md leading-7 text-gray-300">
+            I am Naledi, a consulting data analyst passionate about working with
+            organisations that want to make effective use of their data; from
+            the first ideas around what you want to measure, how to capture data
+            accurately, through data preparation, analysis and management, all
+            the way to effective presentation of insights. I can support each
+            step of the process to enable your organisation to make
+            evidence-driven decisions and support creating and modifying
+            existing processes as well as training in Tableau, Alteryx, Research
+            Methods and Data Literacy.
+          </p>
+          <p class="mt-3 text-md leading-7 text-gray-300">
+            I am available for short-term freelancing projects or on longer-term
+            consulting contracts.
           </p>
         </div>
       </div>
