Add formspree contact form

--- a/public/index.html
+++ b/public/index.html
@@ -543,8 +543,26 @@
 
     <div class="my-8 sm:mx-auto sm:w-full sm:max-w-md">
       <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-        <form action="#" method="POST">
+        <form action="https://formspree.io/mlenykay" method="POST">
           <div>
+            <label
+              for="name"
+              class="block text-sm font-medium leading-5 text-gray-700"
+            >
+              Name
+            </label>
+            <div class="mt-1 rounded-md shadow-sm">
+              <input
+                id="name"
+                name="name"
+                type="text"
+                required
+                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5"
+              />
+            </div>
+          </div>
+
+          <div class="mt-6">
             <label
               for="email"
               class="block text-sm font-medium leading-5 text-gray-700"
@@ -554,6 +572,7 @@
             <div class="mt-1 rounded-md shadow-sm">
               <input
                 id="email"
+                name="_replyto"
                 type="email"
                 required
                 class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5"
