--- a/public/index.html
+++ b/public/index.html
@@ -590,6 +590,7 @@
             <div class="mt-1 rounded-md shadow-sm">
               <textarea
                 id="message"
+                name="message"
                 rows="4"
                 required
                 class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5"
