Update portfolio, colours, and some other copy

--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,7 @@
               >
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
-                    <img
-                      class="h-8 w-auto sm:h-10"
-                      src="/img/logos/workflow-mark-on-white.svg"
-                      alt=""
-                    />
+                    <img class="h-8 w-auto sm:h-10" src="./logo.png" alt="" />
                   </a>
                   <div class="-mr-2 flex items-center md:hidden">
                     <button
@@ -88,7 +84,7 @@
                 </a>
                 <a
                   href="#contact"
-                  class="ml-8 font-medium text-indigo-600 hover:text-indigo-900 focus:outline-none focus:text-indigo-700 transition duration-150 ease-in-out"
+                  class="ml-8 font-medium text-primary-600 hover:text-primary-900 focus:outline-none focus:text-primary-700 transition duration-150 ease-in-out"
                 >
                   Get in touch
                 </a>
@@ -161,7 +157,7 @@
                 <div>
                   <a
                     href="#contact"
-                    class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100 focus:text-indigo-700 transition duration-150 ease-in-out"
+                    class="block w-full px-5 py-3 text-center font-medium text-primary-600 bg-gray-50 hover:bg-gray-100 hover:text-primary-700 focus:outline-none focus:bg-gray-100 focus:text-primary-700 transition duration-150 ease-in-out"
                   >
                     Get in touch
                   </a>
@@ -179,7 +175,7 @@
               >
                 Naledi Hollbruegge
                 <br class="xl:hidden" />
-                <span class="text-indigo-600">Analytics Consultant</span>
+                <span class="text-primary-600">Analytics Consultant</span>
               </h2>
               <p
                 class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"
@@ -193,7 +189,7 @@
                 <div class="rounded-md shadow">
                   <a
                     href="#portfolio"
-                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
+                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-primary-600 hover:bg-primary-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
                   >
                     See my portfolio
                   </a>
@@ -221,12 +217,12 @@
     </div>
 
     <!-- Services -->
-    <div id="services" class="py-12 bg-white">
+    <div id="services" class="mt-20 bg-white">
       <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-screen-xl lg:px-8">
         <div class="lg:grid lg:grid-cols-3 lg:gap-8">
           <div>
             <div
-              class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+              class="flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"
             >
               <svg
                 class="h-6 w-6"
@@ -247,15 +243,15 @@
                 Collect
               </h5>
               <p class="mt-2 text-base leading-6 text-gray-500">
-                I'm trained and highly experienced in questionnaire design and
-                have worked with SNAP, Qualtrics, Commcare and Airtable to
-                collect and process data.
+                I'm trained and highly experienced in questionnaire design, with
+                a background in social psychology, and have worked with SNAP,
+                Qualtrics, Commcare and Airtable to collect and process data.
               </p>
             </div>
           </div>
           <div class="mt-10 lg:mt-0">
             <div
-              class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+              class="flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"
             >
               <svg
                 class="h-6 w-6"
@@ -276,15 +272,18 @@
                 Process
               </h5>
               <p class="mt-2 text-base leading-6 text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                I am an
+                <span class="italic">Alteryx Designer Advanced Certified</span>
+                analyst. I offer support on existing workflows, creation of new
+                processes and training at all levels covering data
+                transformation, unification, spatial and predictive analysis,
+                and more.
               </p>
             </div>
           </div>
           <div class="mt-10 lg:mt-0">
             <div
-              class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+              class="flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"
             >
               <svg
                 class="h-6 w-6"
@@ -306,9 +305,13 @@
                 Visualise
               </h5>
               <p class="mt-2 text-base leading-6 text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                I am a
+                <span class="italic">
+                  Tableau Desktop Certified Professional
+                </span>
+                who has worked with a diverse range of subjects. I have
+                experience creating interactive tools and static inforgraphics
+                in Tableau that can be consumed online or in print.
               </p>
             </div>
           </div>
@@ -317,15 +320,18 @@
     </div>
 
     <!-- About me -->
-    <div id="about-me" class="relative bg-gray-800">
+    <div id="about-me" class="relative mt-20 bg-primary-700">
       <div
-        class="h-56 bg-indigo-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2"
+        class="relative h-56 bg-primary-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2"
       >
         <img
           class="w-full h-full object-cover"
           src="./naledi.png"
           alt="Support team"
         />
+        <div
+          class="absolute top-0 bottom-0 left-0 right-0 bg-primary-500 opacity-25"
+        ></div>
       </div>
       <div
         class="relative max-w-screen-xl mx-auto px-4 py-12 sm:px-6 lg:px-8 lg:py-16"
@@ -356,7 +362,7 @@
     </div>
 
     <!-- Portfolio -->
-    <div id="portfolio" class="py-12 bg-white">
+    <div id="portfolio" class="mt-20 bg-white">
       <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="lg:text-center">
           <h3
@@ -365,168 +371,102 @@
             Portfolio
           </h3>
           <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 lg:mx-auto">
-            A sample of my work for clients and personal projects
+            A sample of my client work and personal projects
           </p>
         </div>
       </div>
     </div>
 
-    <div class="flex flex-wrap">
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./capgemini.jpg')"
+    <div class="mt-14 flex flex-wrap">
+      <template
+        x-for="project in projects"
+        x-data="{
+          projects: [
+            {
+              client: 'Equal Measures 2030',
+              summary: 'How well are countries meeting the needs of girls?',
+              image: '1.jpg',
+            },
+            {
+              client: 'Operation Fistula',
+              summary: 'Visualising estimates of obstetric fistula prevalence based on an academic research paper.',
+              image: '2.jpg',
+            },
+            {
+              client: 'Personal Project',
+              summary: 'Using Mapbox and Tableau to raise awareness of migrant deaths. Awarded “Viz of the Day”.',
+              image: '3.png',
+            },
+            {
+              client: 'Capgemini',
+              summary: 'Provided design and technical guidance to the team visualising the results of the IT-trends survey.',
+              image: '4.jpg',
+            },
+            {
+              client: 'Operation Fistula',
+              summary: 'Alteryx macro that uses an API to extract data from Airtable.',
+              image: '5.png',
+            },
+            {
+              client: 'Direct Relief',
+              summary: 'Interactive tool to explore where clinical data collection about obstetric fistula is most successful. ',
+              image: '6.png',
+            },
+            {
+              client: 'Equal Measures 2030 ',
+              summary: 'Interactive visualisation exploring if countries are making progress towards more gender equality. ',
+              image: '7.png',
+            },
+            {
+              client: 'Personal Project',
+              summary: 'Interactive tool to explore results from a survey looking at attitudes to discrimination.',
+              image: '8.png',
+            },
+            {
+              client: 'Personal Project',
+              summary: 'Mobile-optimised visualisation exploring malaria trends in Africa. Awarded “Viz of the Day” and has over 67900 views to date.',
+              image: '9.png',
+            },
+            {
+              client: 'Personal Project',
+              summary: 'Visualisation of complex data around policy makers’ knowledge on gender issues. Featured in the book “Makeover Monday”. ',
+              image: '10.png',
+            },
+            {
+              client: 'Deloitte',
+              summary: 'An Alteryx macro that parses the XML of another workflow to extract a list of all tools utilised. ',
+              image: '11.png',
+            },
+            {
+              client: 'Personal Project',
+              summary: 'Self-quantification project in which I recorded data about the books I read and presented these in an infographic style.',
+               image: '12.png',
+            },
+          ]}"
       >
         <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
+          class="h-64 w-full lg:w-3/12 bg-cover"
+          x-bind:style="`background-image: url('${project.image}')`"
         >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Cap Gemini
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
+          <div
+            class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
+          >
+            <div class="absolute w-full h-full bg-primary-700 opacity-90"></div>
+            <div class=" z-10 text-center px-5">
+              <h5 class="text-2xl leading-6 font-medium text-white">
+                <span x-text="project.client"></span>
+              </h5>
+              <p class="text-md mt-2 text-base leading-6 text-white">
+                <span x-text="project.summary"></span>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./opfistula.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Operation Fistula
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./equalmeasures.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Equal Measures
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./capgemini.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Cap Gemini
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./capgemini.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Cap Gemini
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./opfistula.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Operation Fistula
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./equalmeasures.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Equal Measures
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="h-64 w-full lg:w-3/12 bg-cover"
-        style="background-image: url('./capgemini.jpg')"
-      >
-        <div
-          class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-        >
-          <div class="absolute w-full h-full bg-white opacity-75"></div>
-          <div class=" z-10 text-center">
-            <h5 class="text-lg leading-6 font-medium text-gray-900">
-              Cap Gemini
-            </h5>
-            <p class="mt-2 text-base leading-6 text-gray-700">
-              IT trends
-            </p>
-          </div>
-        </div>
-      </div>
+      </template>
     </div>
 
     <!-- Contact -->
-    <div id="contact" class="pt-12 bg-white">
+    <div id="contact" class="mt-20 bg-white">
       <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="lg:text-center">
           <h3
@@ -602,7 +542,7 @@
             <span class="block w-full rounded-md shadow-sm">
               <button
                 type="submit"
-                class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
+                class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-500 focus:outline-none focus:border-primary-700 focus:shadow-outline-primary active:bg-primary-700 transition duration-150 ease-in-out"
               >
                 Send
               </button>
@@ -672,10 +612,7 @@
             class="ml-6 text-gray-400 hover:text-gray-500"
           >
             <span class="sr-only">Tableau</span>
-            <img
-              src="./tableau.png"
-              class="h-6 w-6 opacity-50 hover:opacity-75"
-            />
+            <img src="./tableau.png" class="h-6 w-6 opacity-50 hover:" />
           </a>
           <a
             href="https://twitter.com/lediholly"
