Add links for each portfolio project

--- a/public/index.html
+++ b/public/index.html
@@ -386,61 +386,74 @@
               client: 'Equal Measures 2030',
               summary: 'How well are countries meeting the needs of girls?',
               image: '1.jpg',
+              href: 'https://data.em2030.org/key-groups/girls/',
             },
             {
               client: 'Operation Fistula',
               summary: 'Visualising estimates of obstetric fistula prevalence based on an academic research paper.',
               image: '2.jpg',
+              href: 'https://public.tableau.com/profile/operation.fistula6589#!/vizhome/EstimatedPrevalenceofObstetricFistulain19Sub-SaharanAfricanCountries/Estimateprevalence',
             },
             {
               client: 'Personal Project',
               summary: 'Using Mapbox and Tableau to raise awareness of migrant deaths. Awarded “Viz of the Day”.',
               image: '3.png',
+              href: 'https://public.tableau.com/profile/naledi.hollbruegge#!/vizhome/MigrantdeathsanddisappearancesintheMediterranean/MigrantsintheMediterranean',
             },
             {
               client: 'Capgemini',
               summary: 'Provided design and technical guidance to the team visualising the results of the IT-trends survey.',
               image: '4.jpg',
+              href: 'https://public.tableau.com/profile/capgeminide#!/vizhome/IT-Trends_2018/ITTrendsStory',
             },
             {
               client: 'Operation Fistula',
               summary: 'Alteryx macro that uses an API to extract data from Airtable.',
               image: '5.png',
+              href: 'https://nalediholly.wordpress.com/2019/02/07/airtable-and-alteryx/',
+
             },
             {
               client: 'Direct Relief',
               summary: 'Interactive tool to explore where clinical data collection about obstetric fistula is most successful. ',
               image: '6.png',
+              href: 'https://public.tableau.com/profile/operation.fistula6589#!/vizhome/Engagementinthefistulasector/Engagement',
             },
             {
               client: 'Equal Measures 2030 ',
               summary: 'Interactive visualisation exploring if countries are making progress towards more gender equality. ',
               image: '7.png',
+              href: 'https://data.em2030.org/2020-index-projections/data-explorer-global/',
             },
             {
               client: 'Personal Project',
               summary: 'Interactive tool to explore results from a survey looking at attitudes to discrimination.',
               image: '8.png',
+              href: 'https://public.tableau.com/profile/naledi.hollbruegge#!/vizhome/PerceptionsofdiscriminationintheUSin2014/Perceptionsofdiscriminationsurveyresults',
             },
             {
               client: 'Personal Project',
               summary: 'Mobile-optimised visualisation exploring malaria trends in Africa. Awarded “Viz of the Day” and has over 67900 views to date.',
               image: '9.png',
+              href: 'https://public.tableau.com/profile/naledi.hollbruegge#!/vizhome/MakeoverMonday34Malaria/MalariainAfrica',
             },
             {
               client: 'Personal Project',
               summary: 'Visualisation of complex data around policy makers’ knowledge on gender issues. Featured in the book “Makeover Monday”. ',
               image: '10.png',
+              href: 'https://public.tableau.com/profile/naledi.hollbruegge#!/vizhome/Whatpolicymakersknowaboutwomensissues-MakeoverMonday102018/Whatdotheyknow',
             },
             {
               client: 'Deloitte',
               summary: 'An Alteryx macro that parses the XML of another workflow to extract a list of all tools utilised. ',
               image: '11.png',
+              href: 'https://gallery.alteryx.com/#!app/Extract-Alteryx-Tools-Macro/5aa941398a93373b041ae460',
             },
             {
               client: 'Personal Project',
               summary: 'Self-quantification project in which I recorded data about the books I read and presented these in an infographic style.',
-               image: '12.png',
+              image: '12.png',
+              href: 'https://public.tableau.com/profile/naledi.hollbruegge#!/vizhome/MyYearInBooks/WhatIreadin2019',
             },
           ]}"
       >
@@ -448,7 +461,9 @@
           class="h-64 w-full lg:w-3/12 bg-cover"
           x-bind:style="`background-image: url('${project.image}')`"
         >
-          <div
+          <a
+            x-bind:href="project.href"
+            target="_blank"
             class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
           >
             <div class="absolute w-full h-full bg-primary-700 opacity-90"></div>
@@ -460,7 +475,7 @@
                 <span x-text="project.summary"></span>
               </p>
             </div>
-          </div>
+          </a>
         </div>
       </template>
     </div>
