Fix profile picture positioning

--- a/public/index.html
+++ b/public/index.html
@@ -325,7 +325,7 @@
         class="relative h-56 bg-primary-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2"
       >
         <img
-          class="w-full h-full object-cover"
+          class="w-full h-full object-cover object-right"
           src="./naledi.png"
           alt="Support team"
         />
