--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,13 @@
                   Portfolio
                 </a>
                 <a
+                  href="https://nalediholly.wordpress.com/"
+                  target="_blank"
+                  class="ml-8 font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:text-gray-900 transition duration-150 ease-in-out"
+                >
+                  Blog
+                </a>
+                <a
                   href="#contact"
                   class="ml-8 font-medium text-primary-600 hover:text-primary-900 focus:outline-none focus:text-primary-700 transition duration-150 ease-in-out"
                 >
@@ -152,6 +159,13 @@
                     class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
                   >
                     Portfolio
+                  </a>
+                  <a
+                    href="https://nalediholly.wordpress.com/"
+                    target="_blank"
+                    class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out"
+                  >
+                    Blog
                   </a>
                 </div>
                 <div>
@@ -595,6 +609,15 @@
               class="text-base leading-6 text-gray-500 hover:text-gray-900"
             >
               Portfolio
+            </a>
+          </div>
+          <div class="px-5 py-2">
+            <a
+              href="https://nalediholly.wordpress.com/"
+              target="_blank"
+              class="text-base leading-6 text-gray-500 hover:text-gray-900"
+            >
+              Blog
             </a>
           </div>
           <div class="px-5 py-2">
