--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,10 @@
                 class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0"
               >
                 <div class="flex items-center justify-between w-full md:w-auto">
-                  <a href="#">
-                    <img class="h-8 w-auto sm:h-10" src="./logo.png" alt="" />
+                  <a href="#" class="mb-2">
+                    <span class="text-5xl font-black text-primary-600 ">
+                      n
+                    </span>
                   </a>
                   <div class="-mr-2 flex items-center md:hidden">
                     <button
@@ -113,11 +115,9 @@
               <div class="rounded-lg bg-white shadow-xs overflow-hidden">
                 <div class="px-5 pt-4 flex items-center justify-between">
                   <div>
-                    <img
-                      class="h-8 w-auto"
-                      src="/img/logos/workflow-mark-on-white.svg"
-                      alt=""
-                    />
+                    <span class="text-5xl font-black text-primary-600 ">
+                      n
+                    </span>
                   </div>
                   <div class="-mr-2">
                     <button
