--- a/public/index.html
+++ b/public/index.html
@@ -472,24 +472,30 @@
           ]}"
       >
         <div
-          class="h-64 w-full lg:w-3/12 bg-cover"
+          class="group h-64 w-full lg:w-3/12 bg-cover"
           x-bind:style="`background-image: url('${project.image}')`"
         >
-          <a
-            x-bind:href="project.href"
-            target="_blank"
-            class="opacity-0 hover:opacity-100 w-full h-full relative flex flex-col justify-center items-center"
-          >
-            <div class="absolute w-full h-full bg-primary-700 opacity-90"></div>
-            <div class=" z-10 text-center px-5">
-              <h5 class="text-2xl leading-6 font-medium text-white">
-                <span x-text="project.client"></span>
-              </h5>
-              <p class="text-md mt-2 text-base leading-6 text-white">
-                <span x-text="project.summary"></span>
-              </p>
-            </div>
-          </a>
+          <div class="relative hidden group group-hover:block w-full h-full">
+            <a
+              x-bind:href="project.href"
+              target="_blank"
+              class="absolute w-full h-full"
+            >
+              <div
+                class="absolute w-full h-full bg-primary-700 opacity-90"
+              ></div>
+              <div
+                class="absolute w-full h-full flex flex-col justify-center items-center z-10 text-center px-5"
+              >
+                <h5 class="text-2xl leading-6 font-medium text-white">
+                  <span x-text="project.client"></span>
+                </h5>
+                <p class="text-md mt-2 text-base leading-6 text-white">
+                  <span x-text="project.summary"></span>
+                </p>
+              </div>
+            </a>
+          </div>
         </div>
       </template>
     </div>
