--- a/public/index.html
+++ b/public/index.html
@@ -472,7 +472,7 @@
           ]}"
       >
         <div
-          class="h-64 w-full lg:w-3/12 bg-cover"
+          class="h-64 w-full sm:w-6/12 md:w-4/12 lg:w-3/12 bg-cover"
           x-bind:style="`background-image: url('${project.image}')`"
           x-on:click="project.showCaption = true"
           x-on:mouseenter="project.showCaption = true"
