Use padding in place of some margin to improve scrollTo

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
     </div>
 
     <!-- Services -->
-    <div id="services" class="mt-20 bg-white">
+    <div id="services" class="pt-20 bg-white">
       <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-screen-xl lg:px-8">
         <div class="lg:grid lg:grid-cols-3 lg:gap-8">
           <div>
@@ -376,7 +376,7 @@
     </div>
 
     <!-- Portfolio -->
-    <div id="portfolio" class="mt-20 bg-white">
+    <div id="portfolio" class="mt-14 pt-6 bg-white">
       <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="lg:text-center">
           <h3
@@ -506,7 +506,7 @@
     </div>
 
     <!-- Contact -->
-    <div id="contact" class="mt-20 bg-white">
+    <div id="contact" class="pt-20 bg-white">
       <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="lg:text-center">
           <h3
