Update about me and Tableau sections

--- a/public/index.html
+++ b/public/index.html
@@ -324,7 +324,7 @@
                   Tableau Desktop Certified Professional
                 </span>
                 who has worked with a diverse range of subjects. I have
-                experience creating interactive tools and static inforgraphics
+                experience creating interactive tools and static infographics
                 in Tableau that can be consumed online or in print.
               </p>
             </div>
@@ -357,14 +357,13 @@
             About me
           </h2>
           <p class="mt-3 text-md leading-7 text-gray-300">
-            I am Naledi, a consulting data analyst passionate about working with
+            I am Naledi, a consulting data analyst and social researcher passionate about working with
             organisations that want to make effective use of their data; from
-            the first ideas around what you want to measure, how to capture data
+            the first ideas around what you want to measure and how to capture data
             accurately, through data preparation, analysis and management, all
-            the way to effective presentation of insights. I can support each
-            step of the process to enable your organisation to make
-            evidence-driven decisions and support creating and modifying
-            existing processes as well as training in Tableau, Alteryx, Research
+            the way to impactful presentation of insights. I can support each
+            step of the process to enable your organisation in making
+            evidence-driven decisions or share insights with new audiences. I also offer training in Tableau, Alteryx, CommCare, Research
             Methods and Data Literacy.
           </p>
           <p class="mt-3 text-md leading-7 text-gray-300">
