Add view button to porfolio items

--- a/public/index.html
+++ b/public/index.html
@@ -499,6 +499,9 @@
                     x-text="project.summary"
                     class="text-base mt-2 font-light leading-6 text-white"
                   ></p>
+                  <span class="mt-5 text-white text-sm border border-solid px-4 py-1.5 rounded-md">
+                    View
+                  </span>
                 </div>
               </a>
             </div>
