Google Analytics tag added

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>UA-161391703-1
     <meta charset="utf-8" />
     <title>Naledi Hollbruegge</title>
     <link rel="stylesheet" href="output.css" />
