Updated Google Analytics tag

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>UA-161391703-1
+  <head>
     <meta charset="utf-8" />
     <title>Naledi Hollbruegge</title>
     <link rel="stylesheet" href="output.css" />
@@ -20,6 +20,18 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161391703-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-161391703-1');
+    </script>
+
+  
   </head>
 
   <body>
